New linker script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set ( CMAKE_TOOLCHAIN_FILE "cmake/toolchain-arm-eabi.cmake")
 
 add_compile_options("-DCORE_M4")
 add_compile_options("-DC15_VERSION_4")
+add_compile_options("-DDONT_RESET_ON_RESTART")
 
 file(GLOB_RECURSE SOURCES ./*.c)
 
