Removed malloc/free, to get it linked for now

--- a/cm4/CMakeLists.txt
+++ b/cm4/CMakeLists.txt
@@ -5,10 +5,10 @@ project(c15_lpc_m4)
 set (CPU "cortex-m4")
 
 # Optimisation / CPU and Warnings
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -ggdb -mcpu=${CPU} -Wall")
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -mcpu=${CPU} -Wall")
 
 # Autoremove unused code
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fdata-sections -ffunction-sections -Wl,--gc-sections")
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fdata-sections -ffunction-sections -Wl,--gc-sections -mfpu=fpv4-sp-d16 -mfloat-abi=hard")
 
 add_compile_options("-DCORE_M4")
 add_compile_options("-DC15_VERSION_4")
