Add debug flags

--- a/cm0/CMakeLists.txt
+++ b/cm0/CMakeLists.txt
@@ -5,7 +5,7 @@ project(c15_lpc_m0)
 set (CPU "cortex-m0")
 
 # Optimisation / CPU and Warnings
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -mcpu=${CPU} -Wall")
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -ggdb -mcpu=${CPU} -Wall")
 
 # Autoremove unused code
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fdata-sections -ffunction-sections -Wl,--gc-section")
